--- a/rogherdy-h/app/src/main/res/values/styles.xml
+++ b/rogherdy-h/app/src/main/res/values/styles.xml
@@ -1,8 +1,9 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <!-- Mac Android Studio barfs on this -->
+    <!-- style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar" -->
         <!-- Customize your theme here. -->
-    </style>
+    <!-- /style -->
 
 </resources>
